# tauri-starter

./: AGENTS.md  README.md  nuxt.config.ts  oxfmt.config.ts  oxlint.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  skills-lock.json  vitest.config.ts
.agents/skills/nuxt-ui/: SKILL.md
.agents/skills/nuxt/references/: advanced-hooks.md  advanced-layers.md  advanced-module-authoring.md  best-practices-data-fetching.md  best-practices-ssr.md  core-config.md  core-data-fetching.md  core-deployment.md  core-directory-structure.md  core-modules.md  core-routing.md  features-components-autoimport.md  features-components.md  features-composables.md  features-server.md  features-state.md  rendering-modes.md
.agents/skills/vue/: SKILL.md
.agents/skills/vue/references/: advanced-patterns.md
.agents/skills/vueuse-functions/: SKILL.md
.agents/skills/vueuse-functions/references/: computedEager.md  computedWithControl.md  createDisposableDirective.md  createInjectionState.md  createReusableTemplate.md  createSharedComposable.md  createTemplatePromise.md  createUnrefFn.md  onClickOutside.md  onElementRemoval.md  onKeyStroke.md  onLongPress.md  (+100 more)
.github/workflows/: ci.yaml
.husky/: pre-commit
.zed/: settings.json
app/: app.config.ts  app.vue
app/components/app/: scroll-area.vue
app/layouts/: default.vue
app/pages/: index.vue
scripts/: create-release-commit.ts  sync-tauri-version.ts
src-tauri/: Cargo.toml  tauri.conf.json
test/nuxt/: component.test.ts
test/unit/: example.test.ts
tests/: example.spec.ts
(+12 files in other folders)
