[package]
name = "xcvzmoon-tauri-starter"
version = "0.0.0"
description = "My starter for Tauri template with Nuxt"
authors = ["Mon Albert Gamil <mrgamilmonalbert@gmail.com>"]
license = "MIT"
repository = "https://github.com/xcvzmoon/tauri-starter"
edition = "2024"
rust-version = "1.96.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
